; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bmake/extr_job.c_JobInterrupt.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bmake/extr_job.c_JobInterrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i32, i32* }

@ABORT_INTERRUPT = common dso_local global i32 0, align 4
@aborting = common dso_local global i32 0, align 4
@job_table = common dso_local global %struct.TYPE_4__* null, align 8
@job_table_end = common dso_local global %struct.TYPE_4__* null, align 8
@JOB_ST_RUNNING = common dso_local global i64 0, align 8
@JOB = common dso_local global i32 0, align 4
@debug_file = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [45 x i8] c"JobInterrupt passing signal %d to child %d.\0A\00", align 1
@touchFlag = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [11 x i8] c".INTERRUPT\00", align 1
@TARG_NOCREATE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@ignoreErrors = common dso_local global i32 0, align 4
@MAKEINTR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @JobInterrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @JobInterrupt(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %9 = load i32, i32* @ABORT_INTERRUPT, align 4
  store i32 %9, i32* @aborting, align 4
  %10 = call i32 @JobSigLock(i32* %7)
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** @job_table, align 8
  store %struct.TYPE_4__* %11, %struct.TYPE_4__** %5, align 8
  br label %12

12:                                               ; preds = %51, %2
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** @job_table_end, align 8
  %15 = icmp ult %struct.TYPE_4__* %13, %14
  br i1 %15, label %16, label %54

16:                                               ; preds = %12
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @JOB_ST_RUNNING, align 8
  %21 = icmp ne i64 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %16
  br label %51

23:                                               ; preds = %16
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 2
  %26 = load i32*, i32** %25, align 8
  store i32* %26, i32** %8, align 8
  %27 = load i32*, i32** %8, align 8
  %28 = call i32 @JobDeleteTarget(i32* %27)
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 8
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %50

33:                                               ; preds = %23
  %34 = load i32, i32* @JOB, align 4
  %35 = call i64 @DEBUG(i32 %34)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %44

37:                                               ; preds = %33
  %38 = load i32, i32* @debug_file, align 4
  %39 = load i32, i32* %4, align 4
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %41 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i32 0, i32 1
  %42 = load i32, i32* %41, align 8
  %43 = call i32 @fprintf(i32 %38, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0), i32 %39, i32 %42)
  br label %44

44:                                               ; preds = %37, %33
  %45 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %46 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %45, i32 0, i32 1
  %47 = load i32, i32* %46, align 8
  %48 = load i32, i32* %4, align 4
  %49 = call i32 @KILLPG(i32 %47, i32 %48)
  br label %50

50:                                               ; preds = %44, %23
  br label %51

51:                                               ; preds = %50, %22
  %52 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %53 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %52, i32 1
  store %struct.TYPE_4__* %53, %struct.TYPE_4__** %5, align 8
  br label %12

54:                                               ; preds = %12
  %55 = call i32 @JobSigUnlock(i32* %7)
  %56 = load i32, i32* %3, align 4
  %57 = icmp ne i32 %56, 0
  br i1 %57, label %58, label %71

58:                                               ; preds = %54
  %59 = load i32, i32* @touchFlag, align 4
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %71, label %61

61:                                               ; preds = %58
  %62 = load i32, i32* @TARG_NOCREATE, align 4
  %63 = call i32* @Targ_FindNode(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i32 %62)
  store i32* %63, i32** %6, align 8
  %64 = load i32*, i32** %6, align 8
  %65 = icmp ne i32* %64, null
  br i1 %65, label %66, label %70

66:                                               ; preds = %61
  %67 = load i32, i32* @FALSE, align 4
  store i32 %67, i32* @ignoreErrors, align 4
  %68 = load i32*, i32** %6, align 8
  %69 = call i32 @JobRun(i32* %68)
  br label %70

70:                                               ; preds = %66, %61
  br label %71

71:                                               ; preds = %70, %58, %54
  %72 = load i32, i32* @MAKEINTR, align 4
  %73 = call i32 @Trace_Log(i32 %72, i32 0)
  %74 = load i32, i32* %4, align 4
  %75 = call i32 @exit(i32 %74) #3
  unreachable
}

declare dso_local i32 @JobSigLock(i32*) #1

declare dso_local i32 @JobDeleteTarget(i32*) #1

declare dso_local i64 @DEBUG(i32) #1

declare dso_local i32 @fprintf(i32, i8*, i32, i32) #1

declare dso_local i32 @KILLPG(i32, i32) #1

declare dso_local i32 @JobSigUnlock(i32*) #1

declare dso_local i32* @Targ_FindNode(i8*, i32) #1

declare dso_local i32 @JobRun(i32*) #1

declare dso_local i32 @Trace_Log(i32, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
